# CSGORec

./: CMakeLists.txt  ConsoleService.cpp  ConsoleService.h  README.md  main.cpp
Services/: BashService.cpp  BashService.h  ConsoleService.cpp  ConsoleService.h  GameService.cpp  GameService.h
